package(default_visibility = ["//visibility:public"])

load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("@npm//@bazel/jasmine:index.bzl", "jasmine_node_test")
load("@build_bazel_rules_nodejs//:index.bzl", "pkg_npm")

ts_library(
    name = "datatypes",
    module_name = "nova_ecs/datatypes",
    srcs = [
        "vector.ts",
        "position.ts",
        "angle.ts",
        "mod.ts",
        "set.ts",
        "map.ts",
    ],
    deps = [
        "@npm//io-ts",
        "@npm//fp-ts",
        "@npm//immer",
    ]
)

ts_library(
    name = "datatypes_test_lib",
    srcs = [
        "vector_test.ts",
        "position_test.ts",
        "set_test.ts",
        "map_test.ts",
    ],
    deps = [
        ":datatypes",
        "@npm//@types/jasmine",
        "@npm//io-ts",
        "@npm//fp-ts",
        "@npm//immer",
    ]
)

jasmine_node_test(
    name = "datatypes_test",
    srcs = [
        ":datatypes_test_lib",
    ]
)

filegroup(
    name = "datatypes_es6",
    srcs = [":datatypes"],
    output_group = "es6_sources",
)

pkg_npm(
    name = "datatypes_pkg",
    deps = [
        ":datatypes",
        ":datatypes_es6",
    ],
)
