package(default_visibility = ["//visibility:public"])

load("//:defaults.bzl", "ts_library", "esbuild")
load("@npm//@bazel/jasmine:index.bzl", "jasmine_node_test")
load("@npm//@bazel/concatjs:index.bzl", "concatjs_devserver")
load("@build_bazel_rules_nodejs//internal/npm_install:npm_umd_bundle.bzl", "npm_umd_bundle")
load("@build_bazel_rules_nodejs//:index.bzl", "js_library")


ts_library(
    name = "demo_lib",
    srcs = [
        "demo.ts",
    ],
    deps = [
        "//nova_ecs:ecs",
        "//nova_ecs/plugins",
        "@npm//pixi.js",
        "@npm//uuid",
        "@npm//@types/uuid",
        "@npm//stats.js",
        "@npm//@types/stats.js",
    ],
)

esbuild(
    name = "demo_bundle",
    args = {
        "keepNames": True,
    },
    entry_point = "demo.ts",
    target = "es2015",
    minify = False,
    sources_content = True,
    link_workspace_root = True,
    deps = [
        ":demo_lib",
    ],
)

# There's no UMD bundle for PIXI.js, so just using this as a server.
concatjs_devserver(
    name = "demo",
    static_files = ["index.html", ":demo_bundle"],
)
