package(default_visibility = ["//visibility:public"])

load("//:defaults.bzl", "ts_library", "esbuild")
load("@npm//@bazel/jasmine:index.bzl", "jasmine_node_test")
load("@build_bazel_rules_nodejs//:index.bzl", "js_library")
load("@npm//http-server:index.bzl", "http_server")

ts_library(
    name = "demo_lib",
    srcs = [
        "demo.ts",
    ],
    deps = [
        "//nova_ecs:ecs",
        "//nova_ecs/plugins",
        "@npm//@pixi/app",
        "@npm//@pixi/display",
        "@npm//@pixi/graphics",
        "@npm//@pixi/text",
        "@npm//@pixi/ticker",
        "@npm//@pixi/core",
        "@npm//uuid",
        "@npm//@types/uuid",
        "@npm//stats.js",
        "@npm//@types/stats.js",
    ],
)

esbuild(
    name = "demo_bundle",
    args = {
        "keepNames": True,
    },
    entry_point = "demo.ts",
    target = "es2015",
    minify = False,
    sources_content = True,
    link_workspace_root = True,
    deps = [
        ":demo_lib",
    ],
)

http_server(
    name = "demo",
    data = [
        "index.html",
        ":demo_bundle",
    ],
    args = [
        "./nova_ecs/demo",
        "-p", "8000",
    ],
)
