package(default_visibility = ["//visibility:public"])

load("//:defaults.bzl", "ts_library")

# ts_library(
#     name = "cacheless_gettable",
#     srcs = ["CachelessGettable.ts"],
#     deps = [
#         "//nova_data_interface",
#     ]
# )

# ts_library(
#     name = "read_nova_file",
#     srcs = ["readNovaFile.ts"],
#     deps = [
#         "@npm//resourceforkjs",
#         "//nova_parse/src/resource_parsers:resource_parsers",
#     ]
# )

# ts_library(
#     name = "idspace_handler",
#     srcs = ["IDSpaceHandler.ts"],
#     deps = [
#         "@npm//resourceforkjs",
#         "//nova_parse/src/resource_parsers:resource_parsers",
#     ]
# )

ts_library(
    name = "nova_parse_libraries",
    module_name = "nova_parse/src",
    srcs = glob(["*.ts"]),
    deps = [
        "//nova_data_interface",
        "//nova_parse/src/resource_parsers:resource_parsers",
        "//nova_parse/src/parsers",
        "@npm//@types/node",
        "@npm//resourceforkjs",
        "@npm//ts-enum-util",
    ]
)
