package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("@npm_bazel_jasmine//:index.bzl", "jasmine_node_test")

ts_library(
    name = "unit_test_sources",
    testonly = True,
    srcs = [
        "Gettable_test.ts",
    ],
    deps = [
        "//novadatainterface",
        "@npm//@types/node",
        "@npm//jasmine",
        "@npm//@types/jasmine",
    ]
)

jasmine_node_test(
    name = "unit_tests",
    srcs = [":unit_test_sources"],
)
