package(default_visibility = ["//visibility:public"])

load("//:defaults.bzl", "ts_library")

# ts_library(
#     name = "cacheless_gettable",
#     srcs = ["CachelessGettable.ts"],
#     deps = [
#         "//novadatainterface",
#     ]
# )

# ts_library(
#     name = "read_nova_file",
#     srcs = ["readNovaFile.ts"],
#     deps = [
#         "//resource_fork",
#         "//novaparse/src/resource_parsers:resource_parsers",
#     ]
# )

# ts_library(
#     name = "idspace_handler",
#     srcs = ["IDSpaceHandler.ts"],
#     deps = [
#         "//resource_fork",
#         "//novaparse/src/resource_parsers:resource_parsers",
#     ]
# )

ts_library(
    name = "novaparse_libraries",
    module_name = "novaparse/src",
    srcs = glob(["*.ts"]),
    deps = [
        "//novadatainterface",
        "//novaparse/src/resource_parsers:resource_parsers",
        "//novaparse/src/parsers",
        "//resource_fork",
        "@npm//@types/node",
        "@npm//ts-enum-util",
    ]
)
