package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("@novajs//:mocha_ts_test.bzl", "mocha_ts_test")



mocha_ts_test(
    name = "resource_parsers_test",
    srcs = glob(["*.ts"]),
    data = glob(["files/**"]),
    deps = [
        "//novaparse/src/resource_parsers",
        "@npm//bluebird",
        "@npm//@types/bluebird",
        "@npm//chai",
        "@npm//chai-as-promised",
        "@npm//@types/node",
        "@npm//@types/mocha",
        "@npm//@types/chai",
        "@npm//@types/chai-as-promised",
    ]
)

