package(default_visibility = ["//visibility:public"])


load("@npm_bazel_typescript//:index.bzl", "ts_library")


ts_library(
    name = "client",
    srcs = glob(["*.ts"]),
    deps = [
        "@npm//@types/node",
        "//nova/src/common",
        "//nova/src/client/gamedata",
        "@npm//io-ts",
        "@npm//fp-ts",
    ]
)
