package(default_visibility = ["//visibility:public"])


load("@npm_bazel_typescript//:index.bzl", "ts_library")


ts_library(
    name = "common",
    srcs = glob(["*.ts"]),
    deps = [
        "@npm//@types/node",
        "@npm//io-ts",
        "@npm//fp-ts",
        "//nova/src/engine",
        "//nova/src/proto:ship_state_ts_proto",
        "@npm//ts-enum-util",
    ]
)
