package(default_visibility = ["//visibility:public"])

load("//:defaults.bzl", "ts_library")
load("@npm//@bazel/jasmine:index.bzl", "jasmine_node_test")

ts_library(
    name = "communication_lib",
    srcs = [
        "Channel.ts",
        "SocketMessage.ts",
        "CommunicatorMessage.ts",
        "multi_room_communicator.ts",
    ],
    deps = [
        "@npm//rxjs",
        "@npm//io-ts",
        "@npm//fp-ts",
        "@npm//immer",
        "//nova_ecs/plugins",
        "//nova_ecs/datatypes",
        "//nova_ecs:ecs",
    ]
)

ts_library(
    name = "communication_server_lib",
    srcs = [
        "SocketChannelServer.ts",
        "CommunicatorServer.ts",
    ],
    deps = [
        ":communication_lib",
        "@npm//@types/node",
        "@npm//uuid",
        "@npm//@types/uuid",
        "@npm//immer",
        "@npm//rxjs",
        "@npm//ws",
        "@npm//@types/ws",
        "@npm//fp-ts",
        "//nova_ecs/plugins",
    ]
)

ts_library(
    name = "communication_client_lib",
    srcs = [
        "SocketChannelClient.ts",
        "CommunicatorClient.ts",
    ],
    deps = [
        ":communication_lib",
        "@npm//@types/node",
        "@npm//uuid",
        "@npm//@types/uuid",
        "@npm//rxjs",
        "@npm//fp-ts",
        "//nova_ecs/plugins",
    ]
)

jasmine_node_test(
    name = "communication_tests",
    link_workspace_root = True,
    srcs = [":unit_test_sources"],
)

ts_library(
    name = "test_utils_lib",
    srcs = ["test_utils.ts"],
)

ts_library(
    name = "unit_test_sources",
    testonly = True,
    # All tests must end in "_test.ts" or jasmine won't recognize them!
    srcs = [
        "SocketChannelServer_test.ts",
        "SocketChannelClient_test.ts",
        "multi_room_communicator_test.ts",
     ],
    deps = [
        ":test_utils_lib",
        ":communication_server_lib",
        ":communication_client_lib",
        ":communication_lib",
        "//nova_ecs/plugins",
        "@npm//fp-ts",
        "@npm//@types/node",
        "@npm//typescript",
        "@npm//uuid",
        "@npm//@types/uuid",
        "@npm//rxjs",
        "@npm//ws",
        "@npm//@types/ws",
        "@npm//jasmine",
        "@npm//@types/jasmine",
    ]
)
