package(default_visibility = ["//visibility:public"])

load("@npm//@bazel/typescript:index.bzl", "ts_library")

ts_library(
    name = "display",
    srcs = [
        "display_plugin.ts",
        "sprite_sheet_sprite.ts",
        "animation_graphic.ts",
        "textures_from_frames.ts",
        "starfield_plugin.ts",
        "pixi_app_resource.ts",
    ],
    deps = [
        "//nova_ecs:ecs",
        "//nova_ecs/datatypes",
        "//nova_ecs/plugins",
        "//novadatainterface",
        "//nova/src/nova_plugin",
        "@npm//pixi.js",
        "@npm//uuid",
        "@npm//@types/uuid",
        "@npm//immer",
    ]
)
