load("//:defaults.bzl", "ts_library")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "display",
    srcs = [
        "display_plugin.ts",
        "animation_graphic_plugin.ts",
        "sprite_sheet_sprite.ts",
        "animation_graphic.ts",
        "textures_from_frames.ts",
        "starfield_plugin.ts",
        "pixi_app_resource.ts",
        "status_bar.ts",
        "stage_resource.ts",
        "space_resource.ts",
        "convex_hull_display_plugin.ts",
        "target_corners_plugin.ts",
        "planet_corners_plugin.ts",
        "particles_plugin.ts",
        "fullscreen_plugin.ts",
        "explosion_plugin.ts",
        "beam_display_plugin.ts",
        "spaceport_plugin.ts",
        "starmap_plugin.ts",
        "screen_size_plugin.ts",
        "sound_plugin.ts",
        "ship_animation_plugin.ts",
    ],
    deps = [
        "//nova_ecs:ecs",
        "//nova_ecs/datatypes",
        "//nova_ecs/plugins",
        "//novadatainterface",
        "//nova/src/nova_plugin",
        "//nova/src/client/gamedata",
        "//nova/src/util",
        "//nova/src/spaceport",
        "@npm//@pixi/sound",
        "@npm//fp-ts",
        "@npm//pixi.js",
        "@npm//uuid",
        "@npm//@types/uuid",
        "@npm//immer",
        "@npm//sat",
        "@npm//@types/sat",
        "@npm//rbush",
        "@npm//@types/rbush",
        "@npm//@pixi/particle-emitter",
        "@npm//seedrandom",
        "@npm//@types/seedrandom",
        "@npm//rxjs",
    ]
)


# This test (which never actually tested anyting) is broken because
# SAT.js does causes errors with requirejs.
# ts_library(
#     name = "display_test_lib",
#     testonly = True,
#     srcs = [
#         "display_plugin_test.ts",
#     ],
#     deps = [
#         ":display",
#         "@npm//@types/jasmine",
#         "@npm//pixi.js",
#         "//nova_ecs:ecs",
#         "//novadatainterface",
#         "//nova/src/nova_plugin",
#     ]
# )

# esbuild(
#     name = "display_test_bundle",
#     entry_point = "display_plugin_test.ts",
#     args = [
#         "--keep-names",
#         "--resolve-extensions=.mjs,.js",
#     ],
#     sources_content = True,
#     testonly = True,
#     deps = [
#         ":display_test_lib",
#     ],
# )

# web_test(
#     name = "display_test",
#     srcs = [
#         ":display_test_bundle",
#     ],
#     static_files = [
#         # Serve sourcemaps
#         ":display_test_bundle",
#     ],
# )
