package(default_visibility = ["//visibility:public"])


load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("@novajs//:mocha_ts_test.bzl", "mocha_ts_test")



ts_library(
    name = "engine",
    srcs = glob(["*.ts"]),
    deps = [
        "@npm//@types/node",
        "@npm//io-ts",
        "@npm//uuid",
        "@npm//@types/uuid",
        "@npm//fp-ts",
        "@npm//google-protobuf",
        "@npm//@types/google-protobuf",
        "@npm//rxjs",
        "//nova/src/common",
        "//nova/src/proto:vector_state_ts_proto",
        "//nova/src/proto:space_object_state_ts_proto",
        "//nova/src/proto:ship_state_ts_proto",
        "//nova/src/proto:planet_state_ts_proto",
        "//nova/src/proto:system_state_ts_proto",
        "//nova/src/proto:engine_state_ts_proto",
        "//nova/src/proto:weapon_state_ts_proto",
        "//nova/src/proto:outfit_state_ts_proto",
        "//nova/src/proto:armament_state_ts_proto",
        "//nova/src/proto:equipment_state_ts_proto",
        "//nova/src/proto:map_keys_ts_proto",
        "//novadatainterface",
    ]
)


# ts_library(
#     name = "novaparse",
#     srcs = glob(["src/*.ts", "src/**/*.ts"]),
#     module_name = "novaparse", # for npm
#     deps = [
#         #"@npm//pngjs",
#         "@npm//@types/node",
#         "//NovaDataInterface:novadatainterface",
#     ],
# )


