package(default_visibility = ["//visibility:public"])


load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("@novajs//:mocha_ts_test.bzl", "mocha_ts_test")

ts_library(
    name = "utils",
    srcs = [
        "Mod.ts",
        "Stateful.ts",
        "StateSpreader.ts",
        "Vector.ts",
        "CopyState.ts",
        "TreeView.ts",
    ],
    deps = [
        "//nova/src/proto:protobufjs_bundle",
    ]
)
    
ts_library(
    name = "engine",
    srcs = [
        "Engine.ts",
        "StatefulMap.ts",
        "System.ts",
        "EngineFactory.ts",
        "SystemFactory.ts",
    ],
    deps = [
        ":utils",
        "@npm//@types/node",
        "@npm//uuid",
        "@npm//@types/uuid",
        "@npm//google-protobuf",
        "@npm//@types/google-protobuf",
        "@npm//rxjs",
        "//nova/src/engine/space_object:space_object_mods",
        "//nova/src/common",
        "//nova/src/proto:protobufjs_bundle",
        "//novadatainterface",
    ]
)


# ts_library(
#     name = "novaparse",
#     srcs = glob(["src/*.ts", "src/**/*.ts"]),
#     module_name = "novaparse", # for npm
#     deps = [
#         #"@npm//pngjs",
#         "@npm//@types/node",
#         "//NovaDataInterface:novadatainterface",
#     ],
# )


